Fixed alignemnt issue of case study images on work page
Fixed alignment issue and also changed my underlines on home page of quick links to work so they used pseudo :after instead of just a pure border bottom.

Still need to fix so that the underline changes color on hover with the rest of the paragraph.

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -71,11 +71,20 @@
 		font-size:42px;
 	}
 	.work_selects_title{
-		border-bottom:1px solid #fff;
 		display:inline-block;
 		margin:10px 0px 0px 0px;
 		padding:0px 0px 2px 0px;
 		font-size:22px;
+		text-decoration: none;
+		    position: relative;
+	}
+	.work_selects_title:after{
+		content: '';
+    	width:100%;
+    	border-bottom: solid 1px #fff;
+    	position:absolute;
+    	left:0px;
+    	top:30px;
 	}
 	.work_selects{
 		margin:10px 0px 20px 0px;
